--- a/changelog.txt
+++ b/changelog.txt
@@ -24,29 +24,30 @@
 28.10.2015 12:54:29,33	mkdir .browse/mirror onEnter
 28.10.2015 17:01:58,88	search yahoo! improvements, form in .browse/*/images
 28.10.2015 20:01:47,08	sample environment .browse/.browse
-29.10.2015 13:55:15,54	layout_php zu class render komprimieren, gleich noch weiter optimiert.
+29.10.2015 13:55:15,54	folder und setup SimpleXMLElement
 30.10.2015 21:31:26,92	layout handling for sub-files
-31.10.2015  7:04:12,07	root mit SimpleXMLElement
-----github--update-------------------------------------------------------------------------------------------
-	Setup.addImage select 1x bauen und "klonen"
-	global.ini to form
-	Cfg Folder Images rename Setup Images, konsequent im gesamten programm CFG einsetzen
-	rename fx_ to __.*, konsequent im ganzen Programm CFG einsetzen
+31.10.2015  7:04:12,07	root SimpleXMLElement
+31.10.2015 23:50:57,17	global.ini to form  (nur über ?0=.browse/ !mit Slash zu erreichen)
+01.11.2015 10:58:36,07	cfg in global.ini einpflegen
+	*/images submit button into navi panel
 	search chaos
 	maintain : rename , convert , waisen , remove images clean fetch list tag:removed
 	loading animation
-----linux--execution-test-------------------------------------------------------------------------------------
-	year
+	getridof underscore cast wallpaper logo cover ?
+----github--update-------------------------------------------------------------------------------------------
+----linux--execution-test------------------------------------------------------------------------------------
+	sort year
 	playlist
 	play_next
-	*/images submit button into navi panel
-	cards fifo
+
 	automatisierung ( layout , format )
-	filtered content auto-search goes to .file . should look up and save to usual struct
+	filebrowser ops create,delete,move,rename,copy,paste
+	cards fifo
 	links. zb: Hulk/* ->linkto The Avengers/HUlk (2008) /The incredible Hulk (201?)
-	support-comfort move .file/poster > folder images
-	create_preview() background-color at runtime
 	47lo  layout
+	filtered content auto-search goes to .file . should look up and save to usual struct
+	
+http://www.imdb.com/find?s=tt&q=Babel%20%282006%29
 
 <!DOCTYPE html>
 <html>
