--- a/changelog.txt
+++ b/changelog.txt
@@ -32,9 +32,9 @@
 01.11.2015 18:15:18,79	*/images submit button into navi panel, active_fx first
 01.11.2015 23:09:14,44	frontpage gepimpt und page.htm wie folder und setup
 02.11.2015 16:50:42,03	improved rootpage cover-search, rootfiles now reside to cfg->images
-
-	maintain : rename , convert , waisen , remove images clean fetch list tag:removed
-----github--update-------------------------------------------------------------------------------------------
+03.11.2015  9:33:11,28	file-icons
+03.11.2015  9:59:36,18	loading animation (flush() version)
+04.11.2015 14:05:29,49	save ini
 ----linux--execution-test------------------------------------------------------------------------------------
 	automatisierung I ( layout , format )
 ----github--update-------------------------------------------------------------------------------------------
