--- a/changelog.txt
+++ b/changelog.txt
@@ -35,15 +35,19 @@
 03.11.2015  9:33:11,28	file-icons
 03.11.2015  9:59:36,18	loading animation (flush() version)
 04.11.2015 14:05:29,49	save ini
+05.11.2015 19:30:46,19	die wichtigsten Fifo manipulationen : rename , delete ; addImage korrigiert zu addLayoutitem
+fx_root vs fx_folder
+fs-functions auslagern aus renderer
+renderer laden
 ----linux--execution-test------------------------------------------------------------------------------------
-	automatisierung I ( layout , format )
 ----github--update-------------------------------------------------------------------------------------------
-	localization
 	filebrowser ops I  create,delete,rename 
 ----github--beta-release-------------------------------------------------------------------------------------
+desperately needed: plugin-behavior layout , plugin-behavior filehandle
 	sort year
 	play_list
 	play_next
+	localization (iconic pictograms etc preferred)
 	test-units
 	filebrowser ops II move,copy,paste
 	filebrowser ops III drag n drop
